# rust-xtensa

./: vscode.code-workspace
.devcontainer/: Dockerfile  devcontainer.json
rustpio/: CMakeLists.txt  Cargo.toml  platformio.ini
timer/: Cargo.toml  extra_script.py  platformio.ini
timer/src/: lib.rs  main.c
xtensa_test/: CMakeLists.txt  Cargo.toml  build.rs  platformio.build.py  platformio.ini  sdkconfig.h  wrapper.h
xtensa_test/src/: lib.rs
