[package]
name = "xtensa_test"
edition = "2021"
version = "0.1.0"

[lib]
path = "src/lib.rs"
name = "xtensa_test"
edition = "2021"
crate-type = ["staticlib"]
required-features = []

[dependencies]
esp-idf-sys = { version = "0.34.1", features = ["pio"] }
esp-idf-hal = "0.43.1"

[build-dependencies]
bindgen = "0.64"
cc = "1.0"
serde = "1.0"
serde_json = "1.0"
